<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="cl.mario.covid.ui.main.CovidViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:visibility="@{viewModel.hasContent == true ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.842">

            <TextView
                android:id="@+id/tvDate"
                android:text="@{viewModel.covidDataResultLiveData.date}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="100dp"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvDeath"
                tools:text="15 de abril del 2020" />

            <TextView
                android:id="@+id/tvConfirm"
                android:text="@{@string/confirmed_cases(Integer.toString(viewModel.covidDataResultLiveData.confirmed))}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDate"
                app:layout_constraintBottom_toTopOf="@id/ivHome"/>

            <TextView
                android:id="@+id/tvDeath"
                android:text="@{@string/deceased_people(Integer.toString(viewModel.covidDataResultLiveData.death))}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvConfirm"
                app:layout_constraintBottom_toTopOf="@id/ivHome"/>


            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="50dp"
                android:src="@drawable/home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDeath"/>


            <Button
                android:id="@+id/chooseDateDialogBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivHome" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <cl.mario.covid.ui.viewcomponent.ErrorViewComponent
            android:id="@+id/errorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isError() == true ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isLoading() == true ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>